--- a/waggr/package.json
+++ b/waggr/package.json
@@ -10,7 +10,8 @@
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "semantic-ui-react-form-validator": "^1.0.2"
   },
   "scripts": {
     "start": "craco start",
