--- a/waggr/package.json
+++ b/waggr/package.json
@@ -12,6 +12,7 @@
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-react": "^0.88.1",
     "semantic-ui-react-form-validator": "^1.0.2"
   },
