--- a/waggr/package.json
+++ b/waggr/package.json
@@ -41,5 +41,13 @@
     "@craco/craco": "^5.6.1",
     "@semantic-ui-react/craco-less": "^1.1.0",
     "semantic-ui-less": "^2.4.1"
+  }, 
+  {
+    "name": "myapp",
+    "description": "a really cool app",
+    "version": "1.0.0",
+    "engines": {
+      "node": "6.11.1"
+    }
   }
 }
