--- a/waggr/package.json
+++ b/waggr/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "dependencies": {
+    "craco": "0.0.3",
     "google-maps-react": "^2.0.2",
     "gulp": "^4.0.2",
     "react": "^16.11.0",
